--- a/package.json
+++ b/package.json
@@ -18,5 +18,10 @@
   "bugs": {
     "url": "https://github.com/DangerousUserDB/Bot/issues"
   },
-  "homepage": "https://github.com/DangerousUserDB/Bot#readme"
+  "homepage": "https://github.com/DangerousUserDB/Bot#readme",
+  "dependencies": {
+    "discord.js": "^12.3.1",
+    "dotenv": "^8.2.0",
+    "node-fetch": "^2.6.1"
+  }
 }
