--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "discord.js": "^12.3.1",
     "dotenv": "^8.2.0",
+    "jsoning": "^0.8.15",
     "node-fetch": "^2.6.1"
   }
 }
